--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Submodules/Invoke-Build"]
-	path = Submodules/Invoke-Build
+[submodule "submodules/Invoke-Build"]
+	path = submodules/Invoke-Build
 	url = https://github.com/nightroman/Invoke-Build.git
