adds fixexptypes command

--- a/source/dztool/DZT/DZT.Cli/DZT.Cli.csproj
+++ b/source/dztool/DZT/DZT.Cli/DZT.Cli.csproj
@@ -17,6 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="_exp-types.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="_ai-patrols.bat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
