--- a/source/dztool/DZT/DZT.Cli/DZT.Cli.csproj
+++ b/source/dztool/DZT/DZT.Cli/DZT.Cli.csproj
@@ -17,13 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="_exp-types.bat">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="_ai-patrols.bat">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="_zombie-numbers.bat">
+    <None Update="*.bat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
