--- a/source/dztool/DZT/DZT.Lib/DZT.Lib.csproj
+++ b/source/dztool/DZT/DZT.Lib/DZT.Lib.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="DATA\*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
