--- a/source/dztool/DZT/DZT.Cli/Properties/launchSettings.json
+++ b/source/dztool/DZT/DZT.Cli/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "DZT.Cli (adjust-zombie-numbers)": {
+    "DZT.Cli (manipulate-territory)": {
       "commandName": "Project",
-      "commandLineArgs": "adjust-zombie-numbers --dayz-server-root-dir=\"C:\\Program Files (x86)\\Steam\\steamapps\\common\\DayZServer\" --source=\"mpmissions\\dayzOffline.chernarusplus\\env\\zombie_territories-ORIG.xml\" --destination=\"mpmissions\\dayzOffline.chernarusplus\\env\\zombie_territories.xml\""
+      "commandLineArgs": "manipulate-territory\r\n --dayz-server-root-dir=\"C:\\Program Files (x86)\\Steam\\steamapps\\common\\DayZServer\"\r\n --mp-mission=\"dayzOffline.chernarusplus\"\r\n --entity=\"zombie\"\r\n --multiply-by=2"
     },
     "DZT.Cli (update-ai-patrols)": {
       "commandName": "Project",
