--- a/source/dztool/.vscode/launch.json
+++ b/source/dztool/.vscode/launch.json
@@ -5,13 +5,47 @@
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-            "name": ".NET Core Launch (console)",
+            "name": "DZT.Cli generate-splatted-ai-loadout",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/DZT/DZT.Cli/bin/Debug/net6.0/DZT.Cli.dll",
-            "args": [],
+            "args": [
+                "generate-splatted-ai-loadout",
+                "--dayz-server-root-dir=C:\\Program Files (x86)\\Steam\\steamapps\\common\\DayZServer"
+            ],
+            "cwd": "${workspaceFolder}/DZT/DZT.Cli",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
+            "name": "DZT.Cli update-searchforloot",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/DZT/DZT.Cli/bin/Debug/net6.0/DZT.Cli.dll",
+            "args": [
+                "update-searchforloot",
+                "--dayz-server-root-dir=C:\\Program Files (x86)\\Steam\\steamapps\\common\\DayZServer"
+            ],
+            "cwd": "${workspaceFolder}/DZT/DZT.Cli",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
+            "name": "DZT.Cli fix-expansion-types",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/DZT/DZT.Cli/bin/Debug/net6.0/DZT.Cli.dll",
+            "args": [
+                "fix-expansion-types",
+                "--dayz-server-root-dir=C:\\Program Files (x86)\\Steam\\steamapps\\common\\DayZServer",
+                "--file=mpmissions\\dayzOffline.chernarusplus\\db\\types.xml"
+            ],
             "cwd": "${workspaceFolder}/DZT/DZT.Cli",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
