--- a/source/dztool/DZT/DZT.Gui/DZT.Gui.csproj
+++ b/source/dztool/DZT/DZT.Gui/DZT.Gui.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\SAK\SAK\SAK.csproj" />
     <ProjectReference Include="..\DZT.Lib\DZT.Lib.csproj" />
   </ItemGroup>
