--- a/source/HED/HED.GUI/HED.GUI/HED.GUI.csproj
+++ b/source/HED/HED.GUI/HED.GUI/HED.GUI.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AvalonEdit" Version="6.1.3.50" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
