--- a/source/dztool/DZT/DZT.Cli/DZT.Cli.csproj
+++ b/source/dztool/DZT/DZT.Cli/DZT.Cli.csproj
@@ -12,7 +12,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+    <PackageReference Include="Samboy063.Tomlet" Version="5.0.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    <PackageReference Include="Tomlyn" Version="0.16.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +23,15 @@
 
   <ItemGroup>
     <None Update="*.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="adjust-types-config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="adjust-types-config.toml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
