--- a/source/dztool/DZT/DZT.Cli/adjust-types-config.toml
+++ b/source/dztool/DZT/DZT.Cli/adjust-types-config.toml
@@ -8,14 +8,16 @@ lifetime = 600
 restock = 0
 
 [[rules]]
-starts_with = "TTC_PistolSuppressor"
-nominal = 14
+starts_with = "TTC_"
+name_contains_substring_case_insensitive = ["suppressor"]
+nominal = 12
 min = 8
 lifetime = 14400
 restock = 0
 category = "weapons"
 usages = ["Military", "Police"]
 values = ["Tier1", "Tier2", "Tier3", "Tier4"]
+flags = { count_in_map = "1" }
 
 [[rules]]
 name_equals_case_insensitive = ["pot", "WeaponCleaningKit", "PortableGasStove"]
