--- a/source/dztool/DZT/DZT.Cli/Properties/launchSettings.json
+++ b/source/dztool/DZT/DZT.Cli/Properties/launchSettings.json
@@ -1,5 +1,9 @@
 {
   "profiles": {
+    "DZT.Cli (clean-up-profile)": {
+      "commandName": "Project",
+      "commandLineArgs": "clean-up-profile -r=\"C:\\Program Files (x86)\\Steam\\steamapps\\common\\DayZServer\" -p=\"config\""
+    },
     "DZT.Cli (generate-splatted-ai-loadout)": {
       "commandName": "Project",
       "commandLineArgs": "generate-splatted-ai-loadout -r=\"C:\\Program Files (x86)\\Steam\\steamapps\\common\\DayZServer\" -m=\"dayzOffline.chernarusplus\""
