--- a/source/dztool/DZT/DZT.Lib/DZT.Lib.csproj
+++ b/source/dztool/DZT/DZT.Lib/DZT.Lib.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Optional" Version="4.0.0" />
+    <PackageReference Include="Optional.Collections" Version="1.1.0" />
+    <PackageReference Include="Optional.Utilities" Version="1.1.0" />
     <PackageReference Include="Samboy063.Tomlet" Version="5.0.0" />
   </ItemGroup>
 
